K8s/react-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ch-react-apps
  labels:
    name: ch-react-apps
