K8s/pizzaco-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizzaco-service
  namespace: ch-react-apps
spec:
  type: ClusterIP
  selector:
    app: pizzaco
  ports:
    - name: pizzaco
      protocol: TCP
      port: 80
      targetPort: 80
