K8s/pizzaco-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pizzaco-ingress-service
  namespace: ch-react-apps
spec:
  ingressClassName: nginx
  rules:
    - host: pizzaco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pizzaco-service
                port:
                  number: 80
